<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    tools:context=".view.LoginFragment">

    <FrameLayout
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/dimen_8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintTop_toTopOf="@id/guidelineTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLoginUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:layout_marginEnd="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/dimen_12dp"
                android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLoginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="@+id/tilLoginUsername"
                app:layout_constraintStart_toStartOf="@+id/tilLoginUsername"
                app:layout_constraintTop_toBottomOf="@+id/tilLoginUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:padding="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="@id/tilLoginPassword"
                app:layout_constraintTop_toBottomOf="@id/tilLoginPassword" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/stay_sign_in"
                app:layout_constraintEnd_toEndOf="@id/tilLoginPassword"
                app:layout_constraintHorizontal_bias="0.90"
                app:layout_constraintStart_toEndOf="@id/tvRegister"
                app:layout_constraintTop_toBottomOf="@id/tilLoginPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/loginCardView"
        app:layout_constraintEnd_toEndOf="@id/loginCardView"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>
</androidx.constraintlayout.widget.ConstraintLayout>