<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    tools:context=".view.RegisterFragment">

    <ImageView
        android:id="@+id/ivCloseRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintTop_toTopOf="@id/guidelineTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:layout_marginEnd="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterConfirmUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="@+id/tilRegisterUsername"
                app:layout_constraintStart_toStartOf="@+id/tilRegisterUsername"
                app:layout_constraintTop_toBottomOf="@+id/tilRegisterUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterConfirmUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/confirm_username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="@+id/tilRegisterUsername"
                app:layout_constraintStart_toStartOf="@+id/tilRegisterUsername"
                app:layout_constraintTop_toBottomOf="@+id/tilRegisterConfirmUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                app:layout_constraintEnd_toEndOf="@+id/tilRegisterUsername"
                app:layout_constraintStart_toStartOf="@+id/tilRegisterUsername"
                app:layout_constraintTop_toBottomOf="@+id/tilRegisterPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegisterConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/confirm_password"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@id/loginCardView"
        app:layout_constraintEnd_toEndOf="@id/loginCardView"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>


</androidx.constraintlayout.widget.ConstraintLayout>